Fix vertical-align issue
Should be "vertical-align: middle;" here.

--- a/Service/Themes/global.css
+++ b/Service/Themes/global.css
@@ -212,7 +212,7 @@ body {
     width: 30px;
     height: 30px;
     text-align: center;
-    vertical-align: center;
+    vertical-align: middle;
     line-height: 30px;
   }
 
